imported bond yield and price data

--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "List of Causal Effects:\n",
     "Earth quake affects monetary policy https://www.sciencedirect.com/science/article/pii/S0164070418304026"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -224,10 +225,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x10bbbd050>"
+       "<graphviz.graphs.Digraph at 0x1137a9790>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
