--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "from linearmodels.iv import IV2SLS\n",
-    "import graphviz as gr"
+    "from graphviz import Digraph"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,15 +232,16 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x29b784290>"
+       "<graphviz.graphs.Digraph at 0x179e63f90>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "## TODO: make changes to the DAG\n",
     "g = Digraph()\n",
     "g.edge(\"interest rate\", \"bond yield\")\n",
     "g.edge(\"inflation\", \"bond yield\")\n",
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +465,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +715,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
