Added reference of global seismic data

--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -24,7 +24,9 @@
     "\n",
     "Earth quake affects monetary policy https://www.sciencedirect.com/science/article/pii/S0164070418304026\n",
     "\n",
-    "Dynamics of Tokyo Electric Power Company and the Nikkei https://www.jstor.org/stable/26418774"
+    "Dynamics of Tokyo Electric Power Company and the Nikkei https://www.jstor.org/stable/26418774\n",
+    "\n",
+    "Global Seismic Data: https://www.globalquakemodel.org/product/global-seismic-hazard-map"
    ]
   },
   {
