--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -26,7 +26,9 @@
     "\n",
     "Dynamics of Tokyo Electric Power Company and the Nikkei https://www.jstor.org/stable/26418774\n",
     "\n",
-    "Global Seismic Data: https://www.globalquakemodel.org/product/global-seismic-hazard-map"
+    "Global Seismic Data: https://www.globalquakemodel.org/product/global-seismic-hazard-map\n",
+    "\n",
+    "Hi my name is russel"
    ]
   },
   {
