changed description of seismic hazard map

--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Mesh code and prefectures: https://www.stat.go.jp/data/mesh/m_itiran.html\n",
     "\n",
-    "Earthquake probability: https://www.j-shis.bosai.go.jp/map/JSHIS2/download.html?lang=en (first four columns)\n",
+    "Earthquake probability (Seismic Hazard Map): https://www.j-shis.bosai.go.jp/map/JSHIS2/download.html?lang=en (first four columns)\n",
     "\n",
     "Earthquake probability documentation:\n",
     "- https://www.j-shis.bosai.go.jp/map/JSHIS2/man/en/man_point_search.html\n",
