--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,9 @@
     "import statsmodels.api as sm\n",
     "import statsmodels.formula.api as smf\n",
     "from linearmodels.iv import IV2SLS\n",
-    "from graphviz import Digraph"
+    "from graphviz import Digraph\n",
+    "\n",
+    "import zipfile"
    ]
   },
   {
@@ -47,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
@@ -265,10 +267,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x28402cc10>"
+       "<graphviz.graphs.Digraph at 0x15a711050>"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +407,7 @@
        "4  2008/03/31  0.009808  0.009531     NaN      NaN      NaN      NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 318,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -516,7 +518,7 @@
        "4  2002/08/07     NaN  0.005527  0.009627  0.014324      NaN      NaN"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +629,7 @@
        "4  2002/08/07  0.002912  0.005657  0.009613  0.014111      NaN      NaN"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -641,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +740,7 @@
        "4  2007/08/03  0.012272  0.014945  0.016880  0.019389      NaN      NaN"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -752,7 +754,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 322,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       # CODE   T30_I45_PS   T30_I50_PS   T30_I55_PS   T30_I60_PS\n",
+      "0  3036500633     0.000000     0.000000     0.000000     0.000000\n",
+      "1  3036501521     0.000000     0.000000     0.000000     0.000000\n",
+      "2  3036501612     0.000000     0.000000     0.000000     0.000000\n",
+      "3  3036501621     0.000000     0.000000     0.000000     0.000000\n",
+      "4  3622572633     0.926535     0.632552     0.278611     0.066425\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Specify the path to your zip file and the name of the CSV file within the zip file\n",
+    "FILENAME = \"P-Y2020-MAP-AVR-TTL_MTTL\"\n",
+    "COLUMNS = ['# CODE', ' T30_I45_PS', ' T30_I50_PS', ' T30_I55_PS', ' T30_I60_PS']\n",
+    "zip_file_path = 'data/' + FILENAME + '.zip'\n",
+    "csv_file_name = FILENAME + '/' + FILENAME + '.csv'\n",
+    "\n",
+    "# Open the zip file\n",
+    "with zipfile.ZipFile(zip_file_path, 'r') as zip_ref:\n",
+    "    # Extract the CSV file\n",
+    "    with zip_ref.open(csv_file_name) as file:\n",
+    "        # Read the CSV file into a DataFrame\n",
+    "        seismic_data = pd.read_csv(file)[COLUMNS]\n",
+    "\n",
+    "# Now you can work with the DataFrame 'df'\n",
+    "print(seismic_data.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "size of fukushima seismic data is 219782\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th># CODE</th>\n",
+       "      <th>T30_I45_PS</th>\n",
+       "      <th>T30_I50_PS</th>\n",
+       "      <th>T30_I55_PS</th>\n",
+       "      <th>T30_I60_PS</th>\n",
+       "      <th>inFukushima</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3294013</th>\n",
+       "      <td>5539229711</td>\n",
+       "      <td>0.381216</td>\n",
+       "      <td>0.059435</td>\n",
+       "      <td>0.006269</td>\n",
+       "      <td>0.000465</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3294014</th>\n",
+       "      <td>5539229712</td>\n",
+       "      <td>0.383052</td>\n",
+       "      <td>0.059878</td>\n",
+       "      <td>0.006322</td>\n",
+       "      <td>0.000470</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3294015</th>\n",
+       "      <td>5539229713</td>\n",
+       "      <td>0.381675</td>\n",
+       "      <td>0.059546</td>\n",
+       "      <td>0.006282</td>\n",
+       "      <td>0.000467</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3294016</th>\n",
+       "      <td>5539229714</td>\n",
+       "      <td>0.383740</td>\n",
+       "      <td>0.060044</td>\n",
+       "      <td>0.006342</td>\n",
+       "      <td>0.000472</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3294017</th>\n",
+       "      <td>5539229721</td>\n",
+       "      <td>0.384887</td>\n",
+       "      <td>0.060322</td>\n",
+       "      <td>0.006375</td>\n",
+       "      <td>0.000475</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             # CODE   T30_I45_PS   T30_I50_PS   T30_I55_PS   T30_I60_PS  \\\n",
+       "3294013  5539229711     0.381216     0.059435     0.006269     0.000465   \n",
+       "3294014  5539229712     0.383052     0.059878     0.006322     0.000470   \n",
+       "3294015  5539229713     0.381675     0.059546     0.006282     0.000467   \n",
+       "3294016  5539229714     0.383740     0.060044     0.006342     0.000472   \n",
+       "3294017  5539229721     0.384887     0.060322     0.006375     0.000475   \n",
+       "\n",
+       "         inFukushima  \n",
+       "3294013            1  \n",
+       "3294014            1  \n",
+       "3294015            1  \n",
+       "3294016            1  \n",
+       "3294017            1  "
+      ]
+     },
+     "execution_count": 323,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "MESHCODE = \"MeshCode\"\n",
+    "fukushima_mesh = pd.read_csv(\"data/FukushimaMesh.csv\")\n",
+    "fukushima_mesh_codes = set(fukushima_mesh[MESHCODE].unique())\n",
+    "\n",
+    "seismic_data[\"inFukushima\"] = seismic_data[COLUMNS[0]].astype(str).str[:8].astype(int).isin(fukushima_mesh_codes).astype(int)\n",
+    "fuukushima_seismic_data = seismic_data.query(\"inFukushima == 1\")\n",
+    "print(f\"size of fukushima seismic data is {len(fuukushima_seismic_data)}\")\n",
+    "fuukushima_seismic_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +1104,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -957,13 +1118,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -988,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1030,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1221,7 +1377,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1235,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
