--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -267,10 +267,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x2cf318290>"
+       "<graphviz.graphs.Digraph at 0x176696d90>"
       ]
      },
-     "execution_count": 346,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
        "4  2008/03/31  0.009808  0.009531     NaN      NaN      NaN      NaN"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
        "4  2002/08/07     NaN  0.005527  0.009627  0.014324      NaN      NaN"
       ]
      },
-     "execution_count": 348,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
        "4  2002/08/07  0.002912  0.005657  0.009613  0.014111      NaN      NaN"
       ]
      },
-     "execution_count": 349,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -643,7 +643,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -740,7 +740,7 @@
        "4  2007/08/03  0.012272  0.014945  0.016880  0.019389      NaN      NaN"
       ]
      },
-     "execution_count": 350,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -938,27 +938,27 @@
        "3294017            1           0           0        0  "
       ]
      },
-     "execution_count": 353,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fuukushima_seismic_data = seismic_data.query(\"inFukushima == 1\")\n",
-    "print(f\"size of fukushima seismic data is {len(fuukushima_seismic_data)}\")\n",
-    "fuukushima_seismic_data.head()"
+    "fukushima_seismic_data = seismic_data.query(\"inFukushima == 1\")\n",
+    "print(f\"size of fukushima seismic data is {len(fukushima_seismic_data)}\")\n",
+    "fukushima_seismic_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size of fukushima seismic data is 1426724\n"
+      "size of hokkaido seismic data is 1426724\n"
      ]
     },
     {
@@ -1074,27 +1074,27 @@
        "4552747            0           1           0        0  "
       ]
      },
-     "execution_count": 354,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "hokkaido_seismic_data = seismic_data.query(\"inHokkaido == 1\")\n",
-    "print(f\"size of fukushima seismic data is {len(hokkaido_seismic_data)}\")\n",
+    "print(f\"size of hokkaido seismic data is {len(hokkaido_seismic_data)}\")\n",
     "hokkaido_seismic_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size of fukushima seismic data is 115369\n"
+      "size of kumamoto seismic data is 115369\n"
      ]
     },
     {
@@ -1210,27 +1210,27 @@
        "205323            0           0           1        0  "
       ]
      },
-     "execution_count": 355,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "kumamoto_seismic_data = seismic_data.query(\"inKumamoto == 1\")\n",
-    "print(f\"size of fukushima seismic data is {len(kumamoto_seismic_data)}\")\n",
+    "print(f\"size of kumamoto seismic data is {len(kumamoto_seismic_data)}\")\n",
     "kumamoto_seismic_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size of fukushima seismic data is 32194\n"
+      "size of osaka seismic data is 32194\n"
      ]
     },
     {
@@ -1346,20 +1346,20 @@
        "1289240            0           0           0        1  "
       ]
      },
-     "execution_count": 356,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "osaka_seismic_data = seismic_data.query(\"inOsaka == 1\")\n",
-    "print(f\"size of fukushima seismic data is {len(osaka_seismic_data)}\")\n",
+    "print(f\"size of osaka seismic data is {len(osaka_seismic_data)}\")\n",
     "osaka_seismic_data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1550,7 +1550,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 357,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1632,7 +1632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1823,7 @@
        "[5 rows x 217 columns]"
       ]
      },
-     "execution_count": 360,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
