--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -1506,9 +1506,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n",
+      "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n",
+      "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n",
+      "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
+      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -1519,7 +1533,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.853\n",
       "Method:                 Least Squares   F-statistic:                     30.12\n",
       "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
-      "Time:                        18:02:06   Log-Likelihood:                 84.335\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
       "No. Observations:                  16   AIC:                            -160.7\n",
       "Df Residuals:                      12   BIC:                            -157.6\n",
       "Df Model:                           3                                         \n",
@@ -1549,7 +1563,97 @@
       "Model:                            OLS   Adj. R-squared:                  0.853\n",
       "Method:                 Least Squares   F-statistic:                     30.12\n",
       "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
-      "Time:                        18:02:06   Log-Likelihood:                 84.335\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
+      "No. Observations:                  16   AIC:                            -160.7\n",
+      "Df Residuals:                      12   BIC:                            -157.6\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "Intercept                  -0.0024      0.001     -4.651      0.001      -0.004      -0.001\n",
+      "Bond_Maturity_Numeric       0.0005   6.82e-05      6.645      0.000       0.000       0.001\n",
+      "T30_I50_PS_2010            -0.0010      0.002     -0.595      0.563      -0.005       0.003\n",
+      "Mw                          0.0002      0.000      0.909      0.381      -0.000       0.001\n",
+      "Earthquake_Dummy_Tohoku     0.0065      0.001      4.743      0.000       0.004       0.009\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.466   Durbin-Watson:                   1.779\n",
+      "Prob(Omnibus):                  0.039   Jarque-Bera (JB):                4.491\n",
+      "Skew:                           0.387   Prob(JB):                        0.106\n",
+      "Kurtosis:                       5.477   Cond. No.                     1.58e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 9.61e-32. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   Rate   R-squared:                       0.883\n",
+      "Model:                            OLS   Adj. R-squared:                  0.853\n",
+      "Method:                 Least Squares   F-statistic:                     30.12\n",
+      "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
+      "No. Observations:                  16   AIC:                            -160.7\n",
+      "Df Residuals:                      12   BIC:                            -157.6\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "Intercept                  -0.0033      0.002     -1.800      0.097      -0.007       0.001\n",
+      "Bond_Maturity_Numeric       0.0005   6.82e-05      6.645      0.000       0.000       0.001\n",
+      "T30_I55_PS_2010            -0.0015      0.003     -0.577      0.575      -0.007       0.004\n",
+      "Mw                          0.0003      0.000      0.803      0.437      -0.000       0.001\n",
+      "Earthquake_Dummy_Tohoku     0.0062      0.002      3.760      0.003       0.003       0.010\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.466   Durbin-Watson:                   1.779\n",
+      "Prob(Omnibus):                  0.039   Jarque-Bera (JB):                4.491\n",
+      "Skew:                           0.387   Prob(JB):                        0.106\n",
+      "Kurtosis:                       5.477   Cond. No.                     1.73e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 7.93e-32. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   Rate   R-squared:                       0.883\n",
+      "Model:                            OLS   Adj. R-squared:                  0.853\n",
+      "Method:                 Least Squares   F-statistic:                     30.12\n",
+      "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
+      "No. Observations:                  16   AIC:                            -160.7\n",
+      "Df Residuals:                      12   BIC:                            -157.6\n",
+      "Df Model:                           3                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "===========================================================================================\n",
+      "                              coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "-------------------------------------------------------------------------------------------\n",
+      "Intercept                  -0.0047      0.004     -1.092      0.296      -0.014       0.005\n",
+      "Bond_Maturity_Numeric       0.0005   6.82e-05      6.645      0.000       0.000       0.001\n",
+      "T30_I60_PS_2010            -0.0007      0.001     -0.574      0.577      -0.003       0.002\n",
+      "Mw                          0.0005      0.001      0.695      0.500      -0.001       0.002\n",
+      "Earthquake_Dummy_Tohoku     0.0058      0.002      2.433      0.032       0.001       0.011\n",
+      "==============================================================================\n",
+      "Omnibus:                        6.466   Durbin-Watson:                   1.779\n",
+      "Prob(Omnibus):                  0.039   Jarque-Bera (JB):                4.491\n",
+      "Skew:                           0.387   Prob(JB):                        0.106\n",
+      "Kurtosis:                       5.477   Cond. No.                     5.11e+17\n",
+      "==============================================================================\n",
+      "\n",
+      "Notes:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+      "[2] The smallest eigenvalue is 9.13e-33. This might indicate that there are\n",
+      "strong multicollinearity problems or that the design matrix is singular.\n",
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                   Rate   R-squared:                       0.883\n",
+      "Model:                            OLS   Adj. R-squared:                  0.853\n",
+      "Method:                 Least Squares   F-statistic:                     30.12\n",
+      "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
       "No. Observations:                  16   AIC:                            -160.7\n",
       "Df Residuals:                      12   BIC:                            -157.6\n",
       "Df Model:                           3                                         \n",
@@ -1579,7 +1683,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.853\n",
       "Method:                 Least Squares   F-statistic:                     30.12\n",
       "Date:                Wed, 06 Dec 2023   Prob (F-statistic):           7.22e-06\n",
-      "Time:                        18:02:07   Log-Likelihood:                 84.335\n",
+      "Time:                        18:08:31   Log-Likelihood:                 84.335\n",
       "No. Observations:                  16   AIC:                            -160.7\n",
       "Df Residuals:                      12   BIC:                            -157.6\n",
       "Df Model:                           3                                         \n",
@@ -1612,8 +1716,6 @@
       "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
       "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n",
       "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
-      "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n",
-      "/Users/kaiwenhu/anaconda3/lib/python3.11/site-packages/scipy/stats/_stats_py.py:1736: UserWarning: kurtosistest only valid for n>=20 ... continuing anyway, n=16\n",
       "  warnings.warn(\"kurtosistest only valid for n>=20 ... continuing \"\n"
      ]
     }
@@ -1631,7 +1733,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1653,7 +1755,7 @@
       "Estimator:                   PanelOLS   R-squared (Between):              0.8526\n",
       "No. Observations:              564182   R-squared (Within):               0.2460\n",
       "Date:                Wed, Dec 06 2023   R-squared (Overall):              0.6250\n",
-      "Time:                        18:02:10   Log-likelihood                 2.701e+06\n",
+      "Time:                        18:09:46   Log-likelihood                 2.701e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                   7.165e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
@@ -1700,7 +1802,7 @@
       "Estimator:                   PanelOLS   R-squared (Between):              0.8525\n",
       "No. Observations:              564182   R-squared (Within):               0.2467\n",
       "Date:                Wed, Dec 06 2023   R-squared (Overall):              0.6253\n",
-      "Time:                        18:02:13   Log-likelihood                   2.7e+06\n",
+      "Time:                        18:09:49   Log-likelihood                   2.7e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                    7.16e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
@@ -1747,7 +1849,7 @@
       "Estimator:                   PanelOLS   R-squared (Between):              0.8525\n",
       "No. Observations:              564182   R-squared (Within):               0.2467\n",
       "Date:                Wed, Dec 06 2023   R-squared (Overall):              0.6253\n",
-      "Time:                        18:02:16   Log-likelihood                   2.7e+06\n",
+      "Time:                        18:09:53   Log-likelihood                   2.7e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                    7.16e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
