--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -469,7 +469,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x16bf3f850>"
+       "<graphviz.graphs.Digraph at 0x178988850>"
       ]
      },
      "execution_count": 6,
@@ -950,7 +950,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_3874/2482075409.py:20: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_5445/2482075409.py:20: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  panel_data = panel_data.append(bond_data[prefecture], ignore_index=True)\n"
      ]
     },
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
       "Model:                            OLS   Adj. R-squared:                  0.294\n",
       "Method:                 Least Squares   F-statistic:                 1.067e+04\n",
       "Date:                Fri, 08 Dec 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        14:45:21   Log-Likelihood:             2.1687e+06\n",
+      "Time:                        16:08:12   Log-Likelihood:             2.1687e+06\n",
       "No. Observations:              564182   AIC:                        -4.337e+06\n",
       "Df Residuals:                  564159   BIC:                        -4.337e+06\n",
       "Df Model:                          22                                         \n",
@@ -1809,7 +1809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1831,7 +1831,7 @@
       "Estimator:                   PanelOLS   R-squared (Between):              0.3133\n",
       "No. Observations:              564182   R-squared (Within):               0.2490\n",
       "Date:                Fri, Dec 08 2023   R-squared (Overall):              0.2813\n",
-      "Time:                        14:41:16   Log-likelihood                 2.706e+06\n",
+      "Time:                        16:08:16   Log-likelihood                 2.706e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                   1.838e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
