--- a/data_project.ipynb
+++ b/data_project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -469,10 +469,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x178988850>"
+       "<graphviz.graphs.Digraph at 0x1799d31d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -731,7 +731,7 @@
        "[5 rows x 28 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -950,7 +950,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_5445/2482075409.py:20: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "/var/folders/10/5x4xh59n17s1y177g8ms9sc40000gn/T/ipykernel_3192/2482075409.py:20: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  panel_data = panel_data.append(bond_data[prefecture], ignore_index=True)\n"
      ]
     },
@@ -1156,7 +1156,7 @@
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1190,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1393,7 +1393,7 @@
        "4         0.006623        3 Year  0.009808  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1638,7 +1638,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1680,7 +1680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1736,7 +1736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1748,8 +1748,8 @@
       "Dep. Variable:                   Rate   R-squared:                       0.294\n",
       "Model:                            OLS   Adj. R-squared:                  0.294\n",
       "Method:                 Least Squares   F-statistic:                 1.067e+04\n",
-      "Date:                Fri, 08 Dec 2023   Prob (F-statistic):               0.00\n",
-      "Time:                        16:08:12   Log-Likelihood:             2.1687e+06\n",
+      "Date:                Mon, 11 Dec 2023   Prob (F-statistic):               0.00\n",
+      "Time:                        12:49:02   Log-Likelihood:             2.1687e+06\n",
       "No. Observations:              564182   AIC:                        -4.337e+06\n",
       "Df Residuals:                  564159   BIC:                        -4.337e+06\n",
       "Df Model:                          22                                         \n",
@@ -1792,13 +1792,73 @@
       "Notes:\n",
       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
       "[2] The smallest eigenvalue is 5.43e-32. This might indicate that there are\n",
-      "strong multicollinearity problems or that the design matrix is singular.\n"
+      "strong multicollinearity problems or that the design matrix is singular.\n",
+      "\\begin{center}\n",
+      "\\begin{tabular}{lclc}\n",
+      "\\toprule\n",
+      "\\textbf{Dep. Variable:}                                                             &       Rate       & \\textbf{  R-squared:         } &     0.294   \\\\\n",
+      "\\textbf{Model:}                                                                     &       OLS        & \\textbf{  Adj. R-squared:    } &     0.294   \\\\\n",
+      "\\textbf{Method:}                                                                    &  Least Squares   & \\textbf{  F-statistic:       } & 1.067e+04   \\\\\n",
+      "\\textbf{Date:}                                                                      & Mon, 11 Dec 2023 & \\textbf{  Prob (F-statistic):} &     0.00    \\\\\n",
+      "\\textbf{Time:}                                                                      &     12:49:02     & \\textbf{  Log-Likelihood:    } & 2.1687e+06  \\\\\n",
+      "\\textbf{No. Observations:}                                                          &      564182      & \\textbf{  AIC:               } & -4.337e+06  \\\\\n",
+      "\\textbf{Df Residuals:}                                                              &      564159      & \\textbf{  BIC:               } & -4.337e+06  \\\\\n",
+      "\\textbf{Df Model:}                                                                  &          22      & \\textbf{                     } &             \\\\\n",
+      "\\textbf{Covariance Type:}                                                           &    nonrobust     & \\textbf{                     } &             \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\begin{tabular}{lcccccc}\n",
+      "                                                                                    & \\textbf{coef} & \\textbf{std err} & \\textbf{t} & \\textbf{P$> |$t$|$} & \\textbf{[0.025} & \\textbf{0.975]}  \\\\\n",
+      "\\midrule\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[3.0]}                                            &       0.0012  &     2.14e-05     &    57.655  &         0.000        &        0.001    &        0.001     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[5.0]}                                            &       0.0023  &     2.11e-05     &   109.952  &         0.000        &        0.002    &        0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[7.0]}                                            &       0.0037  &     2.13e-05     &   175.905  &         0.000        &        0.004    &        0.004     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[10.0]}                                           &       0.0060  &     2.13e-05     &   279.931  &         0.000        &        0.006    &        0.006     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[15.0]}                                           &       0.0090  &     2.66e-05     &   336.992  &         0.000        &        0.009    &        0.009     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[20.0]}                                           &       0.0114  &     2.66e-05     &   427.603  &         0.000        &        0.011    &        0.011     \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_Tohoku}                                                  &       0.0011  &        0.000     &     3.393  &         0.001        &        0.000    &        0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.5.0]:Earthquake\\_Dummy\\_Tohoku}                &       0.0010  &        0.000     &     2.117  &         0.034        &     7.37e-05    &        0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.7.0]:Earthquake\\_Dummy\\_Tohoku}                &       0.0021  &        0.000     &     4.508  &         0.000        &        0.001    &        0.003     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.10.0]:Earthquake\\_Dummy\\_Tohoku}               &       0.0041  &        0.000     &     8.776  &         0.000        &        0.003    &        0.005     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.15.0]:Earthquake\\_Dummy\\_Tohoku}               &    1.099e-18  &      1.8e-19     &     6.116  &         0.000        &     7.47e-19    &     1.45e-18     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.20.0]:Earthquake\\_Dummy\\_Tohoku}               &    -4.12e-18  &     5.87e-19     &    -7.013  &         0.000        &    -5.27e-18    &    -2.97e-18     \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_HokkaidoEasternIburi}                                    &      -0.0019  &        0.000     &    -5.566  &         0.000        &       -0.003    &       -0.001     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.5.0]:Earthquake\\_Dummy\\_HokkaidoEasternIburi}  &      -0.0009  &        0.000     &    -1.960  &         0.050        &       -0.002    &     7.11e-08     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.7.0]:Earthquake\\_Dummy\\_HokkaidoEasternIburi}  &      -0.0019  &        0.000     &    -4.121  &         0.000        &       -0.003    &       -0.001     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.10.0]:Earthquake\\_Dummy\\_HokkaidoEasternIburi} &      -0.0031  &        0.000     &    -6.595  &         0.000        &       -0.004    &       -0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.15.0]:Earthquake\\_Dummy\\_HokkaidoEasternIburi} &      -0.0040  &        0.000     &    -8.557  &         0.000        &       -0.005    &       -0.003     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.20.0]:Earthquake\\_Dummy\\_HokkaidoEasternIburi} &      -0.0050  &        0.000     &   -10.691  &         0.000        &       -0.006    &       -0.004     \\\\\n",
+      "\\textbf{Earthquake\\_Dummy\\_Osaka}                                                   &      -0.0027  &        0.000     &    -8.158  &         0.000        &       -0.003    &       -0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.5.0]:Earthquake\\_Dummy\\_Osaka}                 &      -0.0009  &        0.000     &    -1.832  &         0.067        &       -0.002    &     6.04e-05     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.7.0]:Earthquake\\_Dummy\\_Osaka}                 &      -0.0018  &        0.000     &    -3.799  &         0.000        &       -0.003    &       -0.001     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.10.0]:Earthquake\\_Dummy\\_Osaka}                &      -0.0029  &        0.000     &    -6.168  &         0.000        &       -0.004    &       -0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.15.0]:Earthquake\\_Dummy\\_Osaka}                &      -0.0034  &        0.000     &    -7.176  &         0.000        &       -0.004    &       -0.002     \\\\\n",
+      "\\textbf{C(Bond\\_Maturity\\_Numeric)[T.20.0]:Earthquake\\_Dummy\\_Osaka}                &      -0.0043  &        0.000     &    -9.184  &         0.000        &       -0.005    &       -0.003     \\\\\n",
+      "\\textbf{T30\\_I45\\_PS\\_2010}                                                         &       0.0020  &     2.47e-05     &    82.292  &         0.000        &        0.002    &        0.002     \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\begin{tabular}{lclc}\n",
+      "\\textbf{Omnibus:}       & 44854.074 & \\textbf{  Durbin-Watson:     } &     0.002  \\\\\n",
+      "\\textbf{Prob(Omnibus):} &    0.000  & \\textbf{  Jarque-Bera (JB):  } & 55618.159  \\\\\n",
+      "\\textbf{Skew:}          &    0.762  & \\textbf{  Prob(JB):          } &      0.00  \\\\\n",
+      "\\textbf{Kurtosis:}      &    2.787  & \\textbf{  Cond. No.          } &  2.48e+18  \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "%\\caption{OLS Regression Results}\n",
+      "\\end{center}\n",
+      "\n",
+      "Notes: \\newline\n",
+      " [1] Standard Errors assume that the covariance matrix of the errors is correctly specified. \\newline\n",
+      " [2] The smallest eigenvalue is 5.43e-32. This might indicate that there are \\newline\n",
+      " strong multicollinearity problems or that the design matrix is singular.\n"
      ]
     }
    ],
    "source": [
     "model_ols = smf.ols(f'Rate ~ 0 + C(Bond_Maturity_Numeric)*Earthquake_Dummy_Tohoku + C(Bond_Maturity_Numeric)*Earthquake_Dummy_HokkaidoEasternIburi +  C(Bond_Maturity_Numeric)*Earthquake_Dummy_Osaka + T30_I45_PS_2010', missing='drop', data=merged_df).fit()\n",
     "print(model_ols.summary())\n",
+    "latex_summary = model_ols.summary().as_latex()\n",
+    "print(latex_summary)\n",
     "\n",
     "# model_ols = smf.ols(f'Rate ~ C(Bond_Maturity_Numeric) + T30_I45_PS_2017 + Mw + Earthquake_Dummy_Osaka', missing='drop', data=merged_df).fit()\n",
     "# print(model_ols.summary())\n",
@@ -1809,7 +1869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1830,8 +1890,8 @@
       "Dep. Variable:                   Rate   R-squared:                        0.7227\n",
       "Estimator:                   PanelOLS   R-squared (Between):              0.3133\n",
       "No. Observations:              564182   R-squared (Within):               0.2490\n",
-      "Date:                Fri, Dec 08 2023   R-squared (Overall):              0.2813\n",
-      "Time:                        16:08:16   Log-likelihood                 2.706e+06\n",
+      "Date:                Mon, Dec 11 2023   R-squared (Overall):              0.2813\n",
+      "Time:                        12:49:06   Log-likelihood                 2.706e+06\n",
       "Cov. Estimator:             Clustered                                           \n",
       "                                        F-statistic:                   1.838e+05\n",
       "Entities:                          34   P-value                           0.0000\n",
@@ -1876,7 +1936,10 @@
     "                            data=merged_df.set_index([\"Prefecture\",\"Year\"]))\n",
     "\n",
     "result = model_fixed.fit(cov_type='clustered', cluster_entity=True, cluster_time=True)\n",
-    "print(result.summary)"
+    "print(result.summary)\n",
+    "\n",
+    "latex_summary = result.summary().as_latex()\n",
+    "print(latex_summary)\n"
    ]
   }
  ],
